# DAGent

./: DAG.py  LICENSE  README.md  base_functions.py  requirements.txt  setup.py
.github/workflows/: python-publish.yml
dagent/: DAG.py  README.md  __init__.py  base_functions.py  pyproject.toml
dagent/examples/: add_two_nums.json  multiply_two_nums.json  simple_agent.py
dagent/src/dagent/: AgentNode.py  DAG_Node.py  DagNode.py  DecisionNode.py  FunctionNode.py  __init__.py  base_functions.py
dagent/src/dagent/tests/: test_test.py
