[project]
name = "dagent"
version = "0.0.3"
description = "AI Agents as DAGs - Directed Acyclic Graphs"
authors = [
    { name = "Parth Sareen", email = "parth@extensible.dev" }
]
dependencies = [
    "litellm>=1.39.5",
]
readme = "../README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dagent"]
